--- a/files/page1/styles.css
+++ b/files/page1/styles.css
@@ -3,7 +3,7 @@
   background-image:none;
   position:static;
   left:auto;
-  width:627px;
+  width:540px;
   margin-left:0;
   margin-right:0;
   text-align:left;
@@ -16,8 +16,8 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:582px;
-  height:1839px;
+  width:540px;
+  height:1454px;
   background:inherit;
   background-color:rgba(255, 255, 255, 1);
   border:none;
@@ -34,8 +34,8 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:582px;
-  height:1839px;
+  width:540px;
+  height:1454px;
   font-family:'Arial Negreta', 'Arial Normal', 'Arial';
   font-weight:700;
   font-style:normal;
@@ -44,8 +44,8 @@
 #u1 {
   position:absolute;
   left:2px;
-  top:912px;
-  width:578px;
+  top:719px;
+  width:536px;
   visibility:hidden;
   word-wrap:break-word;
 }
@@ -53,8 +53,8 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:96px;
-  height:31px;
+  width:102px;
+  height:29px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   border:none;
@@ -69,10 +69,10 @@
 }
 #u2 {
   position:absolute;
-  left:46px;
-  top:170px;
-  width:96px;
-  height:31px;
+  left:43px;
+  top:158px;
+  width:102px;
+  height:29px;
   font-family:'Arial Negreta', 'Arial Normal', 'Arial';
   font-weight:700;
   font-style:normal;
@@ -82,7 +82,7 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:96px;
+  width:102px;
   word-wrap:break-word;
 }
 #u4_div {
@@ -103,8 +103,8 @@
 }
 #u4 {
   position:absolute;
-  left:35px;
-  top:364px;
+  left:32px;
+  top:338px;
   width:113px;
   height:26px;
   font-size:22px;
@@ -135,8 +135,8 @@
 }
 #u6 {
   position:absolute;
-  left:35px;
-  top:314px;
+  left:32px;
+  top:291px;
   width:113px;
   height:26px;
   font-size:22px;
@@ -166,8 +166,8 @@
 }
 #u8 {
   position:absolute;
-  left:35px;
-  top:214px;
+  left:32px;
+  top:199px;
   width:158px;
   height:26px;
   font-size:22px;
@@ -196,8 +196,8 @@
 }
 #u10 {
   position:absolute;
-  left:35px;
-  top:264px;
+  left:32px;
+  top:245px;
   width:180px;
   height:26px;
   font-size:22px;
@@ -227,8 +227,8 @@
 }
 #u12 {
   position:absolute;
-  left:35px;
-  top:415px;
+  left:32px;
+  top:385px;
   width:113px;
   height:26px;
   font-size:22px;
@@ -259,8 +259,8 @@
 }
 #u14 {
   position:absolute;
-  left:35px;
-  top:716px;
+  left:32px;
+  top:664px;
   width:158px;
   height:26px;
   font-size:22px;
@@ -291,8 +291,8 @@
 }
 #u16 {
   position:absolute;
-  left:35px;
-  top:665px;
+  left:32px;
+  top:617px;
   width:113px;
   height:26px;
   font-size:22px;
@@ -323,8 +323,8 @@
 }
 #u18 {
   position:absolute;
-  left:35px;
-  top:465px;
+  left:32px;
+  top:431px;
   width:135px;
   height:26px;
   font-size:22px;
@@ -354,8 +354,8 @@
 }
 #u20 {
   position:absolute;
-  left:35px;
-  top:615px;
+  left:32px;
+  top:571px;
   width:203px;
   height:26px;
   font-size:22px;
@@ -385,8 +385,8 @@
 }
 #u22 {
   position:absolute;
-  left:35px;
-  top:565px;
+  left:32px;
+  top:524px;
   width:113px;
   height:26px;
   font-size:22px;
@@ -403,7 +403,7 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:180px;
+  width:113px;
   height:26px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
@@ -413,20 +413,22 @@
   -webkit-box-shadow:none;
   box-shadow:none;
   font-size:22px;
+  color:#999999;
 }
 #u24 {
   position:absolute;
-  left:35px;
-  top:816px;
-  width:180px;
+  left:32px;
+  top:757px;
+  width:113px;
   height:26px;
   font-size:22px;
+  color:#999999;
 }
 #u25 {
   position:absolute;
   left:0px;
   top:0px;
-  width:180px;
+  width:113px;
   white-space:nowrap;
 }
 #u26_div {
@@ -446,8 +448,8 @@
 }
 #u26 {
   position:absolute;
-  left:35px;
-  top:766px;
+  left:32px;
+  top:711px;
   width:327px;
   height:26px;
   font-size:22px;
@@ -477,8 +479,8 @@
 }
 #u28 {
   position:absolute;
-  left:35px;
-  top:866px;
+  left:32px;
+  top:804px;
   width:113px;
   height:26px;
   font-size:22px;
@@ -507,8 +509,8 @@
 }
 #u30 {
   position:absolute;
-  left:10px;
-  top:1018px;
+  left:9px;
+  top:945px;
   width:4px;
   height:2px;
   -webkit-transform:rotate(45deg);
@@ -529,7 +531,7 @@
   left:0px;
   top:0px;
   width:2px;
-  height:9px;
+  height:8px;
   background:inherit;
   background-color:rgba(255, 255, 255, 1);
   border:none;
@@ -540,10 +542,10 @@
 }
 #u32 {
   position:absolute;
-  left:23px;
-  top:1009px;
+  left:21px;
+  top:936px;
   width:2px;
-  height:9px;
+  height:8px;
   -webkit-transform:rotate(45deg);
   -moz-transform:rotate(45deg);
   -ms-transform:rotate(45deg);
@@ -561,8 +563,8 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:582px;
-  height:68px;
+  width:485px;
+  height:63px;
   background:inherit;
   background-color:rgba(255, 255, 255, 1);
   border:none;
@@ -573,16 +575,16 @@
 }
 #u34 {
   position:absolute;
-  left:45px;
-  top:1125px;
-  width:582px;
-  height:68px;
+  left:42px;
+  top:1044px;
+  width:485px;
+  height:63px;
 }
 #u35 {
   position:absolute;
   left:2px;
-  top:26px;
-  width:578px;
+  top:24px;
+  width:481px;
   visibility:hidden;
   word-wrap:break-word;
 }
@@ -606,8 +608,8 @@
 }
 #u36 {
   position:absolute;
-  left:35px;
-  top:1081px;
+  left:32px;
+  top:1003px;
   width:91px;
   height:26px;
   font-family:'Arial Negreta', 'Arial Normal', 'Arial';
@@ -627,19 +629,19 @@
   left:0px;
   top:0px;
   width:2px;
-  height:41px;
+  height:38px;
 }
 #u38 {
   position:absolute;
   left:0px;
-  top:1454px;
+  top:1349px;
   width:1px;
-  height:40px;
+  height:37px;
 }
 #u39 {
   position:absolute;
   left:2px;
-  top:12px;
+  top:10px;
   width:1px;
   visibility:hidden;
   word-wrap:break-word;
@@ -664,8 +666,8 @@
 }
 #u40 {
   position:absolute;
-  left:20px;
-  top:85px;
+  left:19px;
+  top:79px;
   width:17px;
   height:16px;
   font-family:'Arial Negreta', 'Arial Normal', 'Arial';
@@ -685,8 +687,8 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:327px;
-  height:36px;
+  width:320px;
+  height:33px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   border:none;
@@ -700,10 +702,10 @@
 }
 #u42 {
   position:absolute;
-  left:149px;
-  top:85px;
-  width:327px;
-  height:36px;
+  left:138px;
+  top:79px;
+  width:320px;
+  height:33px;
   font-size:21px;
   color:#999999;
   text-align:center;
@@ -712,22 +714,22 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:327px;
+  width:320px;
   word-wrap:break-word;
 }
 #u44 {
   position:absolute;
-  left:146px;
-  top:316px;
-  width:201px;
-  height:28px;
+  left:135px;
+  top:293px;
+  width:281px;
+  height:26px;
 }
 #u44_input {
   position:absolute;
   left:0px;
   top:0px;
-  width:201px;
-  height:28px;
+  width:281px;
+  height:26px;
   background-color:transparent;
   font-family:'Arial Normal', 'Arial';
   font-weight:400;
@@ -741,17 +743,17 @@
 }
 #u45 {
   position:absolute;
-  left:146px;
-  top:366px;
-  width:189px;
-  height:28px;
+  left:135px;
+  top:340px;
+  width:263px;
+  height:26px;
 }
 #u45_input {
   position:absolute;
   left:0px;
   top:0px;
-  width:189px;
-  height:28px;
+  width:263px;
+  height:26px;
   background-color:transparent;
   font-family:'Arial Normal', 'Arial';
   font-weight:400;
@@ -765,17 +767,17 @@
 }
 #u46 {
   position:absolute;
-  left:168px;
-  top:467px;
-  width:226px;
-  height:28px;
+  left:156px;
+  top:433px;
+  width:242px;
+  height:26px;
 }
 #u46_input {
   position:absolute;
   left:0px;
   top:0px;
-  width:226px;
-  height:28px;
+  width:242px;
+  height:26px;
   background-color:transparent;
   font-family:'Arial Normal', 'Arial';
   font-weight:400;
@@ -789,17 +791,17 @@
 }
 #u47 {
   position:absolute;
-  left:148px;
-  top:567px;
-  width:220px;
-  height:28px;
+  left:137px;
+  top:526px;
+  width:303px;
+  height:26px;
 }
 #u47_input {
   position:absolute;
   left:0px;
   top:0px;
-  width:220px;
-  height:28px;
+  width:303px;
+  height:26px;
   background-color:transparent;
   font-family:'Arial Normal', 'Arial';
   font-weight:400;
@@ -813,17 +815,17 @@
 }
 #u48 {
   position:absolute;
-  left:148px;
-  top:668px;
-  width:217px;
-  height:28px;
+  left:137px;
+  top:620px;
+  width:290px;
+  height:26px;
 }
 #u48_input {
   position:absolute;
   left:0px;
   top:0px;
-  width:217px;
-  height:28px;
+  width:290px;
+  height:26px;
   background-color:transparent;
   font-family:'Arial Normal', 'Arial';
   font-weight:400;
@@ -837,17 +839,17 @@
 }
 #u49 {
   position:absolute;
-  left:193px;
-  top:718px;
-  width:184px;
-  height:28px;
+  left:179px;
+  top:666px;
+  width:261px;
+  height:26px;
 }
 #u49_input {
   position:absolute;
   left:0px;
   top:0px;
-  width:184px;
-  height:28px;
+  width:261px;
+  height:26px;
   background-color:transparent;
   font-family:'Arial Normal', 'Arial';
   font-weight:400;
@@ -861,17 +863,17 @@
 }
 #u50 {
   position:absolute;
-  left:146px;
-  top:416px;
-  width:193px;
-  height:28px;
+  left:135px;
+  top:386px;
+  width:248px;
+  height:26px;
 }
 #u50_input {
   position:absolute;
   left:0px;
   top:0px;
-  width:193px;
-  height:28px;
+  width:248px;
+  height:26px;
   background-color:transparent;
   font-family:'Arial Normal', 'Arial';
   font-weight:400;
@@ -885,17 +887,17 @@
 }
 #u51 {
   position:absolute;
-  left:160px;
-  top:35px;
-  width:154px;
-  height:40px;
+  left:138px;
+  top:32px;
+  width:153px;
+  height:37px;
 }
 #u51_input {
   position:absolute;
   left:0px;
   top:0px;
-  width:154px;
-  height:40px;
+  width:153px;
+  height:37px;
   background-color:transparent;
   font-family:'Arial Normal', 'Arial';
   font-weight:400;
@@ -911,21 +913,21 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:33px;
-  height:30px;
+  width:31px;
+  height:28px;
 }
 #u52 {
   position:absolute;
-  left:239px;
-  top:40px;
-  width:33px;
-  height:30px;
+  left:222px;
+  top:37px;
+  width:31px;
+  height:28px;
 }
 #u53 {
   position:absolute;
   left:2px;
-  top:7px;
-  width:29px;
+  top:6px;
+  width:27px;
   visibility:hidden;
   word-wrap:break-word;
 }
@@ -933,8 +935,8 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:582px;
-  height:12px;
+  width:540px;
+  height:11px;
   background:inherit;
   background-color:rgba(243, 244, 248, 1);
   border:none;
@@ -946,15 +948,15 @@
 #u54 {
   position:absolute;
   left:0px;
-  top:131px;
-  width:582px;
-  height:12px;
+  top:122px;
+  width:540px;
+  height:11px;
 }
 #u55 {
   position:absolute;
   left:2px;
   top:-2px;
-  width:578px;
+  width:536px;
   visibility:hidden;
   word-wrap:break-word;
 }
@@ -962,21 +964,21 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:26px;
-  height:49px;
+  width:24px;
+  height:45px;
 }
 #u56 {
   position:absolute;
-  left:20px;
-  top:155px;
-  width:26px;
-  height:49px;
+  left:19px;
+  top:144px;
+  width:24px;
+  height:45px;
 }
 #u57 {
   position:absolute;
   left:2px;
-  top:16px;
-  width:22px;
+  top:14px;
+  width:20px;
   visibility:hidden;
   word-wrap:break-word;
 }
@@ -984,8 +986,8 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:582px;
-  height:41px;
+  width:540px;
+  height:38px;
   background:inherit;
   background-color:rgba(243, 244, 248, 1);
   border:none;
@@ -997,15 +999,15 @@
 #u58 {
   position:absolute;
   left:0px;
-  top:1010px;
-  width:582px;
-  height:41px;
+  top:937px;
+  width:540px;
+  height:38px;
 }
 #u59 {
   position:absolute;
   left:2px;
-  top:12px;
-  width:578px;
+  top:11px;
+  width:536px;
   visibility:hidden;
   word-wrap:break-word;
 }
@@ -1013,21 +1015,21 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:26px;
-  height:49px;
+  width:24px;
+  height:45px;
 }
 #u60 {
   position:absolute;
-  left:9px;
-  top:1070px;
-  width:26px;
-  height:49px;
+  left:8px;
+  top:993px;
+  width:24px;
+  height:45px;
 }
 #u61 {
   position:absolute;
   left:2px;
-  top:16px;
-  width:22px;
+  top:14px;
+  width:20px;
   visibility:hidden;
   word-wrap:break-word;
 }
@@ -1035,8 +1037,8 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:582px;
-  height:427px;
+  width:540px;
+  height:526px;
   background:inherit;
   background-color:rgba(243, 244, 248, 1);
   border:none;
@@ -1048,15 +1050,15 @@
 #u62 {
   position:absolute;
   left:0px;
-  top:1140px;
-  width:582px;
-  height:427px;
+  top:1058px;
+  width:540px;
+  height:526px;
 }
 #u63 {
   position:absolute;
   left:2px;
-  top:206px;
-  width:578px;
+  top:255px;
+  width:536px;
   visibility:hidden;
   word-wrap:break-word;
 }
@@ -1064,21 +1066,21 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:445px;
-  height:120px;
+  width:413px;
+  height:111px;
 }
 #u64 {
   position:absolute;
-  left:95px;
-  top:1196px;
-  width:445px;
-  height:120px;
+  left:88px;
+  top:1110px;
+  width:413px;
+  height:111px;
 }
 #u65 {
   position:absolute;
   left:2px;
-  top:52px;
-  width:441px;
+  top:48px;
+  width:409px;
   visibility:hidden;
   word-wrap:break-word;
 }
@@ -1086,21 +1088,21 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:445px;
-  height:120px;
+  width:413px;
+  height:111px;
 }
 #u66 {
   position:absolute;
-  left:95px;
-  top:1387px;
-  width:445px;
-  height:120px;
+  left:88px;
+  top:1287px;
+  width:413px;
+  height:111px;
 }
 #u67 {
   position:absolute;
   left:2px;
-  top:52px;
-  width:441px;
+  top:48px;
+  width:409px;
   visibility:hidden;
   word-wrap:break-word;
 }
@@ -1108,22 +1110,22 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:259px;
-  height:32px;
+  width:139px;
+  height:30px;
 }
 #u68 {
   position:absolute;
-  left:104px;
-  top:1457px;
-  width:259px;
-  height:32px;
+  left:96px;
+  top:1352px;
+  width:139px;
+  height:30px;
   font-size:20px;
 }
 #u69 {
   position:absolute;
   left:2px;
-  top:8px;
-  width:255px;
+  top:7px;
+  width:135px;
   visibility:hidden;
   word-wrap:break-word;
 }
@@ -1131,37 +1133,37 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:40px;
-  height:245px;
+  width:37px;
+  height:227px;
 }
 #u70 {
   position:absolute;
-  left:45px;
-  top:1148px;
-  width:40px;
-  height:245px;
+  left:42px;
+  top:1065px;
+  width:37px;
+  height:227px;
 }
 #u71 {
   position:absolute;
   left:2px;
-  top:114px;
-  width:36px;
+  top:106px;
+  width:33px;
   visibility:hidden;
   word-wrap:break-word;
 }
 #u72 {
   position:absolute;
-  left:95px;
-  top:1150px;
-  width:354px;
-  height:36px;
+  left:88px;
+  top:1067px;
+  width:328px;
+  height:33px;
 }
 #u72_input {
   position:absolute;
   left:0px;
   top:0px;
-  width:354px;
-  height:36px;
+  width:328px;
+  height:33px;
   background-color:transparent;
   font-family:'Arial Normal', 'Arial';
   font-weight:400;
@@ -1175,17 +1177,17 @@
 }
 #u73 {
   position:absolute;
-  left:95px;
-  top:1341px;
-  width:328px;
-  height:36px;
+  left:88px;
+  top:1244px;
+  width:339px;
+  height:33px;
 }
 #u73_input {
   position:absolute;
   left:0px;
   top:0px;
-  width:328px;
-  height:36px;
+  width:339px;
+  height:33px;
   background-color:transparent;
   font-family:'Arial Normal', 'Arial';
   font-weight:400;
@@ -1201,38 +1203,38 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:259px;
-  height:35px;
+  width:116px;
+  height:32px;
 }
 #u74 {
   position:absolute;
-  left:104px;
-  top:1265px;
-  width:259px;
-  height:35px;
+  left:96px;
+  top:1174px;
+  width:116px;
+  height:32px;
   font-size:20px;
 }
 #u75 {
   position:absolute;
   left:2px;
-  top:10px;
-  width:255px;
+  top:8px;
+  width:112px;
   visibility:hidden;
   word-wrap:break-word;
 }
 #u76 {
   position:absolute;
-  left:113px;
-  top:1264px;
-  width:83px;
-  height:36px;
+  left:105px;
+  top:1173px;
+  width:77px;
+  height:33px;
 }
 #u76_input {
   position:absolute;
   left:0px;
   top:0px;
-  width:83px;
-  height:36px;
+  width:77px;
+  height:33px;
   background-color:transparent;
   font-family:'Arial Normal', 'Arial';
   font-weight:400;
@@ -1246,17 +1248,17 @@
 }
 #u77 {
   position:absolute;
-  left:113px;
-  top:1453px;
-  width:103px;
-  height:36px;
+  left:105px;
+  top:1348px;
+  width:96px;
+  height:33px;
 }
 #u77_input {
   position:absolute;
   left:0px;
   top:0px;
-  width:103px;
-  height:36px;
+  width:96px;
+  height:33px;
   background-color:transparent;
   font-family:'Arial Normal', 'Arial';
   font-weight:400;
@@ -1272,21 +1274,21 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:122px;
-  height:118px;
+  width:113px;
+  height:109px;
 }
 #u78 {
   position:absolute;
-  left:402px;
-  top:173px;
-  width:122px;
-  height:118px;
+  left:403px;
+  top:158px;
+  width:113px;
+  height:109px;
 }
 #u79 {
   position:absolute;
   left:2px;
-  top:51px;
-  width:118px;
+  top:46px;
+  width:109px;
   visibility:hidden;
   word-wrap:break-word;
 }
@@ -1308,8 +1310,8 @@
 }
 #u80 {
   position:absolute;
-  left:35px;
-  top:515px;
+  left:32px;
+  top:478px;
   width:180px;
   height:26px;
   font-size:22px;
@@ -1324,17 +1326,63 @@
 }
 #u82 {
   position:absolute;
-  left:212px;
-  top:517px;
-  width:226px;
-  height:28px;
+  left:197px;
+  top:480px;
+  width:210px;
+  height:26px;
 }
 #u82_input {
   position:absolute;
   left:0px;
   top:0px;
-  width:226px;
-  height:28px;
+  width:210px;
+  height:26px;
+  background-color:transparent;
+  font-family:'Arial Normal', 'Arial';
+  font-weight:400;
+  font-style:normal;
+  font-size:22px;
+  text-decoration:none;
+  color:#000000;
+  text-align:left;
+  border-color:transparent;
+  outline-style:none;
+}
+#u83_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:136px;
+  height:107px;
+}
+#u83 {
+  position:absolute;
+  left:392px;
+  top:158px;
+  width:136px;
+  height:107px;
+}
+#u84 {
+  position:absolute;
+  left:2px;
+  top:46px;
+  width:132px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u85 {
+  position:absolute;
+  left:145px;
+  top:757px;
+  width:261px;
+  height:26px;
+}
+#u85_input {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:261px;
+  height:26px;
   background-color:transparent;
   font-family:'Arial Normal', 'Arial';
   font-weight:400;
