--- a/data/styles.css
+++ b/data/styles.css
@@ -69,6 +69,10 @@
   color:#000000;
   text-align:left;
 }
+.droplist {
+  color:#000000;
+  text-align:left;
+}
 .radio_button {
   text-align:left;
 }
