--- a/files/page2/styles.css
+++ b/files/page2/styles.css
@@ -3,7 +3,7 @@
   background-image:none;
   position:static;
   left:auto;
-  width:10px;
+  width:540px;
   margin-left:0;
   margin-right:0;
   text-align:left;
@@ -11,4 +11,59 @@
 #base {
   position:absolute;
   z-index:0;
+}
+#u86 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:540px;
+  height:1222px;
+}
+#u86_input {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:540px;
+  height:1222px;
+}
+#u87 {
+  position:fixed;
+  left:50%;
+  margin-left:-270px;
+  bottom:0px;
+}
+#u87_state0 {
+  position:relative;
+  left:0px;
+  top:0px;
+  background-image:none;
+}
+#u87_state0_content {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u88_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:540px;
+  height:71px;
+}
+#u88 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:540px;
+  height:71px;
+}
+#u89 {
+  position:absolute;
+  left:2px;
+  top:28px;
+  width:536px;
+  visibility:hidden;
+  word-wrap:break-word;
 }
